<resources>
    <string name="app_name">CategoryMessages</string>

    <!-- PhoneNumberFragment -->
    <string name="label_enter_phone_number">Введите ваш номер телефона</string>
    <string name="label_country_code">+7</string>
    <string name="hint_phone_number">Ваш номер телефона</string>

    <!-- Common view string -->
    <string name="button_continue">Продолжить</string>

    <!-- Common string -->
    <string name="app_behavior_resize_snackbar" translatable="false">ru.spbstu.icst.categorymessages.ui.view.ResizeShackbarBehavior</string>
</resources>
